# horizon-barber-api

./: README.md  horizon_db.sqlite3  pyproject.toml
src/horizon_barber_api/: app.py  database.py  models.py  schemas.py  settings.py
src/horizon_barber_api/routers/: appointment_router.py  barber_service_router.py  user_router.py
src/horizon_barber_api/scripts/: create_tables.py
